# NeP

./: .gitignore  LICENSE  README.md  pyproject.toml
nep/: config.py  extract_mesh.py  launch_test.py  requirements.txt  run_colmap.py
nep/blender_backend/: blender_utils.py
nep/colmap/: read_write_model.py
nep/configs/model/: mip0.yaml  mip360_0.yaml  nep1.yaml  nep1_grid.yaml  nep1_mip.yaml  nep1_mip360.yaml  nep2.yaml  nep2_mip.yaml  nep2_mip_r1.yaml  nep2_mip_r1_inout.yaml  nep2_mip_r1_inout_n32.yaml  nep2_mip_r1_plen.yaml  nep2_nerf.yaml  nep2_nerf64.yaml  nf.yaml  ref0.yaml
nep/dataset/: database.py  train_dataset.py
nep/network/: loss.py  metrics.py
nep/network/fields/: app.py  color.py  mc.py  mipnerf360.py  nerf.py  nerfacto360.py  neus.py  utils.py
nep/network/renderers/: __init__.py  material.py  neilf.py  nerf.py  shape.py  utils.py
nep/network/renderers/neilf_utils/: embedder.py  geo_volsdf.py  loss.py  ray_sampling.py
nep/ns/: buffer.py  cameras.py  config.py  datamanager.py  nep_dataparser.py  override.py  pipeline.py  ray_generator.py  sampler.py  scheduler.py  trainer.py
nep/ns/models/: nep.py
nep/raytracing/: raytracer.py
nep/utils/: base_utils.py  draw_utils.py  pose_utils.py  raw_utils.py  ref_utils.py
scripts/: merge_mask.py  mesh.py  render.py  viewer.py
